syntax = "proto3";

message Port {
  // port unique identifier
  string uid = 1;
  // port name, as displayed in the UI
  string name = 2;
  // utc timestamp for the last time the port received an updated value
  optional int32 last_updated = 3; // utc_timestamp
}

message Connection {
  // uid of source port
  string source_uid = 1;
  // uid of target port
  string target_uid = 2;
}

message Cell {
  // cell unique identifier
  string uid = 1;
  // raw code from the cell
  string code = 2;
  // cell inputs, updated whenever a cell is saved
  repeated Port in_ports = 4;
  // cell outputs, updated whenever a cell is executed
  repeated Port out_ports = 5;
  // cell output text, displayed in the UI
  optional string output = 6;
  // @future: last_executed;
  // @future: last_execution_status; (success / failure)
}

message Graph {
  Cell root = 1;
  repeated Cell cells = 2;
  repeated Connection connections = 3;
  optional string selected_cell = 4;
}
